[package]
name = "cast_url"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "一个封装好的自用库"

[dependencies]
crab-dlna = "0.2.1"
xml = "0.8.20"
anyhow = "1.0.86"
log = "0.4.22"
tokio = { version = "1", features = ["full"] }
rupnp = "2.0.0"
pin-utils = "0.1.0"
local-ip-address = "0.6.1"
futures-util = "0.3.30"
http = "1.1.0"
ssdp-client = "2.0.0"
